--- a/app/index.html
+++ b/app/index.html
@@ -3,17 +3,13 @@
 Ohhh, you like looking under the hood huh?
 It's very rude to stare! GET OUTTA HERE!!
 -->
-
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" dir="ltr" lang="pt-br"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" dir="ltr" lang="pt-br"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" dir="ltr" lang="pt-br"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" dir="ltr" lang="pt-br"> <!--<![endif]-->
+<html itemscope itemtype="http://schema.org/WebPage" class="no-js" lang="en">
   <head>
     <!-- made by Rafael Gomes Alcantara -->
     <!-- contact: rafalcan@gmail.com -->
 
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="cache-control" content="private" />
     <meta http-equiv="pragma" content="private" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
